--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 
 # Godot-specific ignores
 .import/
+*.import
 export.cfg
 export_credentials.cfg
 *.sh
@@ -15,3 +16,4 @@ export_credentials.cfg
 .mono/
 data_*/
 mono_crash.*.json
+
